tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/array/no-close-table.stderr
TOML parse error at line 1, column 16
  |
1 | x = [{ key = 42
  |                ^
invalid inline table
expected `}`
